list comprenshions
[i*i for i in range(10)]
[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]
a =['pavan','sekar','navya']
>>> a
['pavan', 'sekar', 'navya']
>>> for i in a:
...    i.upper()
'PAVAN'
'SEKAR'
'NAVYA'
>>> [i.upper() for i in a]
['PAVAN', 'SEKAR', 'NAVYA']
>>> range(10)
range(0, 10)
>>> a = list(range(10))
>>> a
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
>>> [(1,1),(2,4)]#
[(1, 1), (2, 4)]
>>>
>>>
>>> a
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
>>> for i in a:
...    (i,i*i)
...
(0, 0)
(1, 1)
(2, 4)
(3, 9)
(4, 16)
(5, 25)
(6, 36)
(7, 49)
(8, 64)
(9, 81)
>>> [(i,i*i) for i in a]\
... [(i,i*i) for i in a]
  File "<stdin>", line 2
    [(i,i*i) for i in a]
             ^^^
SyntaxError: invalid syntax
>>>
>>>
>>>
>>>
>>>
>>> [(i,i*i) for i in a]
[(0, 0), (1, 1), (2, 4), (3, 9), (4, 16), (5, 25), (6, 36), (7, 49), (8, 64), (9, 81)]
>>> dict([(i,i*i) for i in a])
{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}
>>> {i:i*i for i in a}
{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}
>>> {i:i*i for i in a}
{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}
>>> [i*i for i in a if i%2 == 1]
[1, 9, 25, 49, 81]
